# otus_homework_3

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: release.yml
